fix Gitlab CI config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ preview:
         # TODO: simplify with https://gitlab.com/gitlab-org/gitlab/-/issues/36373
         BASE_URL: https://${CI_PROJECT_ROOT_NAMESPACE}.${CI_PAGES_DOMAIN}/-/engineering/${CI_PROJECT_NAME}/-/jobs/${CI_JOB_ID}/artifacts/public
     except:
+        - main
         - master
 
 pages:
@@ -50,4 +51,5 @@ pages:
     variables:
         BASE_URL: ${CI_PAGES_URL}
     only:
+        - main
         - master
